sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:23: error: not found: value ttri
  ttri?=ttri?+1
  ^AlgBubbleSort2:23: error: not found: value ttri
  ttri?=ttri?+1
        ^